// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionnairePage handles boolean question answers correctly: questionnaire-with-date-question 1`] = `
<div>
  <div
    class="questionnaire-page"
    style="padding: 40px; max-width: 800px; margin: 0px auto; font-family: Arial, sans-serif;"
  >
    <h1
      style="font-size: 2rem; margin-bottom: 20px; text-align: center;"
    >
      Birth Time Rectification Questionnaire
    </h1>
    <div
      style="border-radius: 8px; margin-bottom: 20px; text-align: center; padding: 10px; background-color: rgb(240, 248, 255);"
    >
      <p>
        Confidence Score: 
        20
        %
      </p>
      <div
        style="width: 100%; background-color: rgb(224, 224, 224); border-radius: 4px; height: 10px;"
      >
        <div
          style="width: 20%; background-color: rgb(52, 152, 219); height: 10px; border-radius: 4px; transition: width 0.5s ease-in-out;"
        />
      </div>
    </div>
    <div
      class="jsx-776cdcbc0448e4ea processing-indicator"
      style="padding: 40px; background-color: rgb(249, 249, 249); border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center;"
    >
      <h2
        class="jsx-776cdcbc0448e4ea"
      >
        Analyzing Your Responses
      </h2>
      <p
        class="jsx-776cdcbc0448e4ea"
      >
        We're processing your answers to determine your precise birth time.
      </p>
      <div
        class="jsx-776cdcbc0448e4ea"
        style="display: inline-block; width: 40px; height: 40px; margin: 20px auto; border: 4px solid #f3f3f3; border-top: 4px solid #3498db; border-radius: 50%; animation: spin 2s linear infinite;"
      />
    </div>
  </div>
</div>
`;

exports[`QuestionnairePage handles date question answers correctly: questionnaire-processing 1`] = `
<div>
  <div
    class="questionnaire-page"
    style="padding: 40px; max-width: 800px; margin: 0px auto; font-family: Arial, sans-serif;"
  >
    <h1
      style="font-size: 2rem; margin-bottom: 20px; text-align: center;"
    >
      Birth Time Rectification Questionnaire
    </h1>
    <div
      style="border-radius: 8px; margin-bottom: 20px; text-align: center; padding: 10px; background-color: rgb(240, 248, 255);"
    >
      <p>
        Confidence Score: 
        20
        %
      </p>
      <div
        style="width: 100%; background-color: rgb(224, 224, 224); border-radius: 4px; height: 10px;"
      >
        <div
          style="width: 20%; background-color: rgb(52, 152, 219); height: 10px; border-radius: 4px; transition: width 0.5s ease-in-out;"
        />
      </div>
    </div>
    <div
      class="jsx-776cdcbc0448e4ea processing-indicator"
      style="padding: 40px; background-color: rgb(249, 249, 249); border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center;"
    >
      <h2
        class="jsx-776cdcbc0448e4ea"
      >
        Analyzing Your Responses
      </h2>
      <p
        class="jsx-776cdcbc0448e4ea"
      >
        We're processing your answers to determine your precise birth time.
      </p>
      <div
        class="jsx-776cdcbc0448e4ea"
        style="display: inline-block; width: 40px; height: 40px; margin: 20px auto; border: 4px solid #f3f3f3; border-top: 4px solid #3498db; border-radius: 50%; animation: spin 2s linear infinite;"
      />
    </div>
  </div>
</div>
`;

exports[`QuestionnairePage handles options type questions correctly: questionnaire-with-options-question 1`] = `
<div>
  <div
    class="questionnaire-page"
    style="padding: 40px; max-width: 800px; margin: 0px auto; font-family: Arial, sans-serif;"
  >
    <h1
      style="font-size: 2rem; margin-bottom: 20px; text-align: center;"
    >
      Birth Time Rectification Questionnaire
    </h1>
    <div
      style="border-radius: 8px; margin-bottom: 20px; text-align: center; padding: 10px; background-color: rgb(240, 248, 255);"
    >
      <p>
        Confidence Score: 
        20
        %
      </p>
      <div
        style="width: 100%; background-color: rgb(224, 224, 224); border-radius: 4px; height: 10px;"
      >
        <div
          style="width: 20%; background-color: rgb(52, 152, 219); height: 10px; border-radius: 4px; transition: width 0.5s ease-in-out;"
        />
      </div>
    </div>
    <div
      class="question-container"
      style="padding: 30px; background-color: rgb(249, 249, 249); border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);"
    >
      <div
        class="question"
        data-testid="question-q1"
      >
        <h2
          style="margin-bottom: 20px;"
        >
          How would you describe your personality?
        </h2>
        <div
          style="display: flex; flex-direction: column; gap: 15px; align-items: flex-start; margin-left: 20px;"
        >
          <label
            style="display: flex; align-items: center; cursor: pointer;"
          >
            <input
              data-testid="option-introverted"
              name="question-q1"
              style="margin-right: 10px;"
              type="radio"
              value="Introverted"
            />
            Introverted
          </label>
          <label
            style="display: flex; align-items: center; cursor: pointer;"
          >
            <input
              data-testid="option-extroverted"
              name="question-q1"
              style="margin-right: 10px;"
              type="radio"
              value="Extroverted"
            />
            Extroverted
          </label>
          <label
            style="display: flex; align-items: center; cursor: pointer;"
          >
            <input
              data-testid="option-balanced"
              name="question-q1"
              style="margin-right: 10px;"
              type="radio"
              value="Balanced"
            />
            Balanced
          </label>
          <button
            class="next-question"
            disabled=""
            style="margin-top: 20px; padding: 10px 20px; background-color: rgb(74, 144, 226); color: white; border-radius: 4px; cursor: not-allowed; opacity: 0.7;"
          >
            Next Question
          </button>
        </div>
      </div>
      <div
        style="margin-top: 30px; display: flex; justify-content: space-between; align-items: center;"
      >
        <div>
          Question 
          1
           of 
          1
        </div>
        <button
          class="skip-question"
          style="padding: 8px 15px; background-color: rgb(108, 117, 125); color: white; border-radius: 4px; cursor: pointer; font-size: 0.9rem;"
        >
          Skip Question
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionnairePage renders error state correctly: questionnaire-error 1`] = `
<div>
  <div
    class="questionnaire-page"
    style="padding: 40px; max-width: 800px; margin: 0px auto; font-family: Arial, sans-serif; text-align: center;"
  >
    <h1
      style="font-size: 2rem; margin-bottom: 20px;"
    >
      Error Loading Questionnaire
    </h1>
    <p
      style="color: red;"
    >
      Failed to load questions. Please try again.
    </p>
    <button
      style="margin-top: 20px; padding: 10px 20px; background-color: rgb(74, 144, 226); color: white; border-radius: 4px; cursor: pointer; font-size: 1rem;"
    >
      Try Again
    </button>
  </div>
</div>
`;

exports[`QuestionnairePage renders loading state correctly: questionnaire-loading 1`] = `
<div>
  <div
    class="jsx-d525c98fb358669b questionnaire-page"
    style="padding: 40px; max-width: 800px; margin: 0px auto; font-family: Arial, sans-serif; text-align: center;"
  >
    <h1
      class="jsx-d525c98fb358669b"
      style="font-size: 2rem; margin-bottom: 20px;"
    >
      Loading Questionnaire...
    </h1>
    <div
      class="jsx-d525c98fb358669b"
      style="display: inline-block; width: 40px; height: 40px; margin: 20px auto; border: 4px solid #f3f3f3; border-top: 4px solid #3498db; border-radius: 50%; animation: spin 2s linear infinite;"
    />
  </div>
</div>
`;

exports[`QuestionnairePage renders questions correctly: questionnaire-with-boolean-question 1`] = `
<div>
  <div
    class="questionnaire-page"
    style="padding: 40px; max-width: 800px; margin: 0px auto; font-family: Arial, sans-serif;"
  >
    <h1
      style="font-size: 2rem; margin-bottom: 20px; text-align: center;"
    >
      Birth Time Rectification Questionnaire
    </h1>
    <div
      style="border-radius: 8px; margin-bottom: 20px; text-align: center; padding: 10px; background-color: rgb(240, 248, 255);"
    >
      <p>
        Confidence Score: 
        20
        %
      </p>
      <div
        style="width: 100%; background-color: rgb(224, 224, 224); border-radius: 4px; height: 10px;"
      >
        <div
          style="width: 20%; background-color: rgb(52, 152, 219); height: 10px; border-radius: 4px; transition: width 0.5s ease-in-out;"
        />
      </div>
    </div>
    <div
      class="question-container"
      style="padding: 30px; background-color: rgb(249, 249, 249); border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);"
    >
      <div
        class="question"
        data-testid="question-q1"
      >
        <h2
          style="margin-bottom: 20px;"
        >
          Did you experience any major career changes?
        </h2>
        <div
          style="display: flex; flex-direction: column; gap: 15px; align-items: flex-start; margin-left: 20px;"
        >
          <label
            style="display: flex; align-items: center; cursor: pointer;"
          >
            <input
              data-testid="option-yes"
              name="question-q1"
              style="margin-right: 10px;"
              type="radio"
              value="yes"
            />
            Yes
          </label>
          <label
            style="display: flex; align-items: center; cursor: pointer;"
          >
            <input
              data-testid="option-no"
              name="question-q1"
              style="margin-right: 10px;"
              type="radio"
              value="no"
            />
            No
          </label>
        </div>
        <div
          style="margin-top: 20px; text-align: center;"
        >
          <button
            class="next-question"
            disabled=""
            style="padding: 10px 20px; background-color: rgb(74, 144, 226); color: white; border-radius: 4px; cursor: not-allowed; opacity: 0.7; margin-right: 10px;"
          >
            Next Question
          </button>
        </div>
      </div>
      <div
        style="margin-top: 30px; display: flex; justify-content: space-between; align-items: center;"
      >
        <div>
          Question 
          1
           of 
          1
        </div>
        <button
          class="skip-question"
          style="padding: 8px 15px; background-color: rgb(108, 117, 125); color: white; border-radius: 4px; cursor: pointer; font-size: 0.9rem;"
        >
          Skip Question
        </button>
      </div>
    </div>
  </div>
</div>
`;
